--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@
 :root {
   --font-color-dark: #242729;
   --font-color-light: #3c4146;
+  --bg-color-gray: #e4e6e8;
   --square-size: 10px;
   --square-gap: 3px;
   --week-width: calc(var(--square-size) + var(--square-gap));
 }
 html {
-  font-family: "Arial", "Helvetica", sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 body {
   background-color: #ffffff;
@@ -43,11 +44,19 @@ h1 {
 p {
   font-size: 14px;
   font-weight: 400;
-  line-height: 23px;
+  line-height: 20px;
   color: var(--font-color-dark);
 }
-ul li {
-  list-style: none;
+code {
+  font-family: "Consolas", monospace;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+
+  padding: 2px 4px;
+  border-radius: 3px;
+  background-color: var(--bg-color-gray);
+  color: var(--font-color-dark);
 }
 .details {
   font-size: 12px;
@@ -68,7 +77,7 @@ ul li {
 .logo {
   margin-bottom: 8px;
 }
-.header-content {
+.header-bottom {
   display: flex;
   padding-bottom: 12px;
   border-bottom: 1px solid #e4e6e8;
@@ -80,9 +89,27 @@ ul li {
   margin-right: 12px;
 }
 
-/* Visuals */
-/* .visuals {
-} */
+/* Content */
+.content {
+}
+.content-bottom {
+  display: flex;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #e4e6e8;
+  margin-bottom: 16px;
+}
+.content p {
+  margin-bottom: 6px;
+}
+.links {
+  padding-left: 24px;
+  margin-bottom: 16px;
+}
+.links ul li {
+  margin: 0px 4px;
+}
+
+/* Grid */
 .months {
   grid-area: months;
 }
@@ -101,6 +128,9 @@ ul li {
   font-size: 10px;
   padding: 12px;
   border: 1px #e1e4e8 solid;
+}
+.grid ul li {
+  list-style: none;
 }
 .months {
   display: grid;
@@ -183,28 +213,3 @@ calc(var(--week-width) * 5) Dec ; */
 .tooltip:hover .tooltip-text {
   visibility: visible;
 }
-/* Icons */
-/* .icons {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 22px;
-
-  border-top: 0.5px solid #dadada;
-  height: 50px;
-  width: 100%;
-}
-
-.icon-div {
-  opacity: 1;
-  transition: opacity 0.2s ease-in-out;
-  width: 120px;
-}
-
-.icon-div:hover {
-  opacity: 0.4;
-}
-
-.icon-div .fa {
-  font-size: 32px;
-  color: #2f5876;
-} */
