--- a/pages/popup/styles.css
+++ b/pages/popup/styles.css
@@ -72,26 +72,7 @@ code {
 }
 
 .details-description {
-  color: #3c4146;
-}
-
-.user-info {
-  font-size: 13px;
-  background-color: #e1ecf4;
-  padding: 5px 7px;
-}
-
-.user-action-time {
   color: #6a737c;
-}
-
-.user-details {
-  color: #0077cc;
-}
-
-.reputation-score {
-  font-size: 12px;
-  margin-right: 2px;
 }
 
 /* Header */
@@ -121,37 +102,114 @@ code {
 }
 
 /* Content */
-.content p {
+.content .content-top p {
   margin-bottom: 6px;
 }
 
-.content .content-description a {
+.content .content-top .content-description a {
   color: inherit;
   text-decoration: none;
 }
 
-.content .content-description code:hover {
+.content .content-top .content-description code:hover {
   cursor: pointer;
 }
 
-.content .bookmarks {
+.content .content-top .bookmarks {
   padding-left: 24px;
   margin-bottom: 16px;
 }
 
-.content .bookmarks ul li {
+.content .content-top .bookmarks ul li {
   margin: 0px 4px;
 }
 
-.content .content-bottom .content-links-bottom {
+.content .content-bottom {
   display: flex;
+  justify-content: space-between;
   padding-bottom: 12px;
   border-bottom: 1px solid #e4e6e8;
   margin-bottom: 16px;
 }
 
+.content .content-bottom .content-links-bottom {
+  display: flex;
+  line-height: 17px;
+}
+
 .content .content-bottom .content-links-bottom li {
   list-style: none;
+}
+
+.content .content-bottom .content-user-bottom {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-areas: "action-time action-time" "profile-image display-name" "profile-image user-flair";
+  width: auto;
+  min-width: 180px;
+  background-color: #e1ecf4;
+  padding: 5px 7px;
+  border-radius: 3px;
+}
+
+.content .content-bottom .content-user-bottom .user-action-time {
+  grid-area: action-time;
+  margin: 1px 0px 4px 0px;
+  font-size: 11px;
+  line-height: 14px;
+  color: #6a737c;
+}
+
+.content .content-bottom .content-user-bottom .user-profile-image {
+  grid-area: profile-image;
+  width: 28px;
+  border-radius: 3px;
+  margin-right: 8px;
+}
+
+.content .content-bottom .content-user-bottom .user-display-name {
+  grid-area: display-name;
+  font-size: 12px;
+  line-height: 14px;
+  color: #0077cc;
+}
+
+.content .content-bottom .content-user-bottom .user-flair {
+  grid-area: user-flair;
+  font-size: 11px;
+  line-height: 13px;
+  color: #6a737c;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .reputation-score {
+  font-weight: 700;
+  margin-right: 2px;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .badge {
+  margin: 0px 3px 0px 2px;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .badge .badge-icon {
+  display: flex;
+  align-items: center;
+  height: 6px;
+  width: 6px;
+  margin-bottom: 1px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .badge .badge-icon.gold-badge-icon {
+  background-color: #ffcc01;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .badge .badge-icon.silver-badge-icon {
+  background-color: #b4b8bc;
+}
+
+.content .content-bottom .content-user-bottom .user-flair .badge .badge-icon.bronze-badge-icon {
+  background-color: #d1a684;
 }
 
 /* Grid */
