--- a/pages/popup/styles.scss
+++ b/pages/popup/styles.scss
@@ -30,8 +30,18 @@ select {
 
 /* Variables */
 $font-color-dark: #242729;
-$font-color-light: #3c4146;
+$font-color-medium-dark: #3c4146;
+$font-color-medium-light: #6a737c;
+$font-color-light: #848d95;
+$font-color-blue: #0077cc;
+
+$badge-color-gold: #ffcc01;
+$badge-color-silver: #b4b8bc;
+$badge-color-bronze: #d1a684;
+
+$border-color: #e4e6e8;
 $bg-color-gray: #e4e6e8;
+
 $square-size: 10px;
 $square-gap: 3px;
 
@@ -46,7 +56,7 @@ h1 {
   font-size: 22px;
   line-height: 30px;
   font-weight: 400;
-  color: $font-color-light;
+  color: $font-color-medium-dark;
 }
 p {
   font-size: 14px;
@@ -74,25 +84,7 @@ code {
   color: $font-color-dark;
 }
 .details-description {
-  color: $font-color-light;
-}
-
-// USER
-.user-info {
-  font-size: 13px;
-
-  background-color: rgb(225, 236, 244);
-  padding: 5px 7px;
-}
-.user-action-time {
-  color: rgb(106, 115, 124);
-}
-.user-details {
-  color: rgb(0, 119, 204);
-}
-.reputation-score {
-  font-size: 12px;
-  margin-right: 2px;
+  color: $font-color-medium-light;
 }
 
 /* Header */
@@ -112,7 +104,7 @@ code {
     ul {
       display: flex;
       padding-bottom: 12px;
-      border-bottom: 1px solid #e4e6e8;
+      border-bottom: 1px solid $border-color;
       margin-bottom: 16px;
 
       li {
@@ -124,34 +116,115 @@ code {
 
 /* Content */
 .content {
-  p {
-    margin-bottom: 6px;
-  }
-  .content-description {
-    a {
-      color: inherit;
-      text-decoration: none;
+  .content-top {
+    p {
+      margin-bottom: 6px;
     }
-    code:hover {
-      cursor: pointer;
+    .content-description {
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+      code:hover {
+        cursor: pointer;
+      }
     }
-  }
-  .bookmarks {
-    padding-left: 24px;
-    margin-bottom: 16px;
-    ul li {
-      margin: 0px 4px;
+    .bookmarks {
+      padding-left: 24px;
+      margin-bottom: 16px;
+      ul li {
+        margin: 0px 4px;
+      }
     }
   }
   .content-bottom {
+    display: flex;
+    justify-content: space-between;
+
+    padding-bottom: 12px;
+    border-bottom: 1px solid $border-color;
+    margin-bottom: 16px;
+
     .content-links-bottom {
       display: flex;
-      padding-bottom: 12px;
-      border-bottom: 1px solid #e4e6e8;
-      margin-bottom: 16px;
-
+      line-height: 17px;
       li {
         list-style: none;
+      }
+    }
+
+    .content-user-bottom {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-areas: "action-time action-time" "profile-image display-name" "profile-image user-flair";
+
+      width: auto;
+      min-width: 180px;
+
+      background-color: rgb(225, 236, 244);
+      padding: 5px 7px;
+      border-radius: 3px;
+
+      .user-action-time {
+        grid-area: action-time;
+        margin: 1px 0px 4px 0px;
+        // font-size: 12px;
+        font-size: 11px;
+        // line-height: 15px;
+        line-height: 14px;
+        color: $font-color-medium-light;
+      }
+      .user-profile-image {
+        grid-area: profile-image;
+        // width: 32px;
+        width: 28px;
+        border-radius: 3px;
+        margin-right: 8px;
+      }
+      .user-display-name {
+        grid-area: display-name;
+        // font-size: 13px;
+        font-size: 12px;
+        // line-height: 15px;
+        line-height: 14px;
+        color: $font-color-blue;
+      }
+      .user-flair {
+        grid-area: user-flair;
+        // font-size: 12px;
+        font-size: 11px;
+        // line-height: 14px;
+        line-height: 13px;
+        color: $font-color-medium-light;
+
+        .reputation-score {
+          font-weight: 700;
+          margin-right: 2px;
+        }
+        .badge {
+          margin: 0px 3px 0px 2px;
+
+          .badge-icon {
+            display: flex;
+            align-items: center;
+            height: 6px;
+            width: 6px;
+            margin-bottom: 1px; // center vertically
+
+            border-radius: 50%;
+            display: inline-block;
+
+            &.gold-badge-icon {
+              background-color: $badge-color-gold;
+            }
+            &.silver-badge-icon {
+              background-color: $badge-color-silver;
+            }
+            &.bronze-badge-icon {
+              background-color: $badge-color-bronze;
+            }
+          }
+        }
       }
     }
   }
