--- a/pages/popup/styles.css
+++ b/pages/popup/styles.css
@@ -4,7 +4,8 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -15,7 +16,7 @@ body {
   background-color: #ffffff;
   min-height: 180px;
   width: auto;
-  min-width: 539px;
+  min-width: 539.2px;
   padding: 16px;
 }
 
@@ -77,7 +78,9 @@ code {
 
 /* Header */
 .header {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header .logo {
@@ -91,6 +94,8 @@ code {
 }
 
 .header .header-bottom ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-bottom: 12px;
   border-bottom: 1px solid #e4e6e8;
@@ -125,14 +130,20 @@ code {
 }
 
 .content .content-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-bottom: 12px;
   border-bottom: 1px solid #e4e6e8;
   margin-bottom: 16px;
 }
 
 .content .content-bottom .content-links-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   line-height: 17px;
 }
@@ -142,9 +153,11 @@ code {
 }
 
 .content .content-bottom .content-user-bottom {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-areas: "action-time action-time" "profile-image display-name" "profile-image user-flair";
+  -ms-grid-columns: auto 1fr;
+      grid-template-columns: auto 1fr;
+      grid-template-areas: "action-time action-time" "profile-image display-name" "profile-image user-flair";
   width: auto;
   min-width: 180px;
   background-color: #e1ecf4;
@@ -153,6 +166,9 @@ code {
 }
 
 .content .content-bottom .content-user-bottom .user-action-time {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: action-time;
   margin: 1px 0px 4px 0px;
   font-size: 11px;
@@ -161,6 +177,9 @@ code {
 }
 
 .content .content-bottom .content-user-bottom .user-profile-image {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
   grid-area: profile-image;
 }
 
@@ -172,6 +191,8 @@ code {
 }
 
 .content .content-bottom .content-user-bottom .user-display-name {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
   grid-area: display-name;
   font-size: 12px;
   line-height: 14px;
@@ -180,6 +201,8 @@ code {
 }
 
 .content .content-bottom .content-user-bottom .user-flair {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
   grid-area: user-flair;
   font-size: 11px;
   line-height: 13px;
@@ -196,8 +219,12 @@ code {
 }
 
 .content .content-bottom .content-user-bottom .user-flair .badge .badge-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 6px;
   width: 6px;
   margin-bottom: 1px;
@@ -219,13 +246,18 @@ code {
 
 /* Grid */
 .grid {
+  position: relative;
+  display: -ms-inline-grid;
   display: inline-grid;
-  grid-template-areas: "empty months" "days squares";
-  grid-template-columns: auto 1fr;
+      grid-template-areas: "empty months" "days squares";
+  -ms-grid-columns: auto 1fr;
+      grid-template-columns: auto 1fr;
   grid-gap: 6px;
   font-size: 10px;
   padding: 12px;
   border: 1px #e1e4e8 solid;
+  width: 100%;
+  height: 133.33px;
 }
 
 .grid ul li {
@@ -233,15 +265,22 @@ code {
 }
 
 .grid .months {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: months;
+  display: -ms-grid;
   display: grid;
 }
 
 .grid .days {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
   grid-area: days;
+  display: -ms-grid;
   display: grid;
   grid-gap: 3px;
-  grid-template-rows: repeat(7, 10px);
+  -ms-grid-rows: (10px)[7];
+      grid-template-rows: repeat(7, 10px);
 }
 
 .grid .days li:nth-child(odd) {
@@ -249,10 +288,14 @@ code {
 }
 
 .grid .squares {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
   grid-area: squares;
+  display: -ms-grid;
   display: grid;
   grid-gap: 3px;
-  grid-template-rows: repeat(7, 10px);
+  -ms-grid-rows: (10px)[7];
+      grid-template-rows: repeat(7, 10px);
   grid-auto-flow: column;
   grid-auto-columns: 10px;
 }
@@ -276,6 +319,81 @@ code {
 
 .grid .squares li[data-level="4"] {
   background-color: #216e39;
+}
+
+.grid-loading-container {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 50%;
+}
+
+.grid-loading,
+.grid-loading:before,
+.grid-loading:after {
+  background: #ebedf0;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 2em;
+}
+
+.grid-loading {
+  color: #ebedf0;
+  text-indent: -9999em;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+.grid-loading:before, .grid-loading:after {
+  position: absolute;
+  top: 0;
+  content: "";
+}
+
+.grid-loading:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.grid-loading:after {
+  left: 1.5em;
+}
+
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    -webkit-box-shadow: 0 0;
+            box-shadow: 0 0;
+    height: 2em;
+  }
+  40% {
+    -webkit-box-shadow: 0 -1em;
+            box-shadow: 0 -1em;
+    height: 3em;
+  }
+}
+
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    -webkit-box-shadow: 0 0;
+            box-shadow: 0 0;
+    height: 2em;
+  }
+  40% {
+    -webkit-box-shadow: 0 -1em;
+            box-shadow: 0 -1em;
+    height: 3em;
+  }
 }
 
 /* Tooltip container */
@@ -318,3 +436,4 @@ code {
 .tooltip:hover .tooltip-text {
   visibility: visible;
 }
+/*# sourceMappingURL=styles.css.map */
